[package]
name = "pdf_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anyhow = "1.0.82"
calamine = "0.24.0"
color-eyre = { version = "0.6.3", features = ["url", "issue-url"] }
polars = "0.39.0"
reqwest = { version = "0.12.3", features = ["blocking"]}
tokio = { version = "1.37.0", features = ["full"]}
